--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script>
     var click_button = document.getElementById("click-to-enter");
     click_button.onclick = function() {
-        window.location = "main.html";
+        window.location = "https://lzreal.github.io/main.html";
 
     }
 </script>
